--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@
 		compile 'org.springframework.boot:spring-boot-starter-web:1.1.1.RELEASE'
 		runtime 'cglib:cglib:3.1'
         runtime 'org.aspectj:aspectjweaver:1.7.4'
+        runtime 'hsqldb:hsqldb:1.8.0.10'
      	testCompile 'junit:junit:4.11'
 		testCompile 'org.springframework:spring-test:4.0.5.RELEASE'
  }
