--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@
 	 	compile 'org.aspectj:aspectjrt:1.7.4'
 	 	compile 'org.springframework:spring-context:4.0.5.RELEASE'
 		compile 'org.springframework.boot:spring-boot-starter-web:1.1.1.RELEASE'
+		compile group: 'org.springframework', name: 'spring-jdbc', version: '4.3.7.RELEASE'
 		runtime 'cglib:cglib:3.1'
         runtime 'org.aspectj:aspectjweaver:1.7.4'
         runtime 'hsqldb:hsqldb:1.8.0.10'
