--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,8 @@
  apply plugin: 'groovy'
  apply plugin: 'eclipse'
  apply plugin: 'idea'
+ apply plugin: 'jetty'
+ 
  group = 'com.apress.isf'
  version = '1.0'
  repositories {
@@ -18,12 +20,19 @@
 	 	compile 'org.springframework:spring-context:4.0.5.RELEASE'
 		compile 'org.springframework.boot:spring-boot-starter-web:1.1.1.RELEASE'
 		compile group: 'org.springframework', name: 'spring-jdbc', version: '4.3.7.RELEASE'
+		compile 'org.springframework:spring-webmvc:4.0.5.RELEASE'
+		runtime 'jstl:jstl:1.2'
 		runtime 'cglib:cglib:3.1'
         runtime 'org.aspectj:aspectjweaver:1.7.4'
         runtime 'hsqldb:hsqldb:1.8.0.10'
      	testCompile 'junit:junit:4.11'
 		testCompile 'org.springframework:spring-test:4.0.5.RELEASE'
  }
+ 
+ httpPort = 8081
+ stopPort = 9080
+ stopKey = "stopKey"
+
  test {
 	 testLogging {
 		 events 'started', 'passed'
